fix horizontal scroll on homepage

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  overflow-x: hidden;
+}
 
 /* You can add global styles to this file, and also import other style files */
 
